# Ragify

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  app.py  streamlit_app.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  security-scan.yml
backend/: pyproject.toml  requirements.txt  run_test.py  test_jwt.py
backend/alembic/: env.py
backend/alembic/versions/: 0aa1f2b3c4d5_add_feedback_table.py  389233fed320_add_missing_chunk_columns.py  5d27e3e22a4f_initial_migration.py  602740e83141_add_embedding_columns.py  60f62404aa55_add_usage_logs_table.py  9b36bf1b9ce3_hash_api_keys.py  a1b2c3d4e5f6_vector_db_optimizations.py  e2ccf094dbbe_add_role_column_to_users.py  f3a4b5c6d7e8_add_display_name_to_users.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: admin.py  documents.py  feedback.py  models.py  projects.py  rag.py  usage.py  users.py
backend/app/core/: config.py  guardrails.py  logging_config.py  model_registry.py  query_cache.py  query_planner.py  rate_limiter.py  supabase_client.py  tracing.py
backend/app/core/rag/: indexing.py  ingestion.py  retrieval.py
backend/app/crud/: apikey.py  document.py  feedback.py  project.py  user.py
backend/app/db/: session.py
backend/app/models/: apikey.py  document.py  feedback.py  project.py  usage_log.py  user.py
backend/app/schemas/: apikey.py  document.py  feedback.py  project.py  user.py  web_search.py
backend/app/services/: embedding_service.py  eval_service.py  query_planner.py  telemetry_models.py  usage_service.py  web_search_service.py
backend/tests/: conftest.py  test_admin.py  test_documents.py  test_guardrails.py  test_projects.py  test_rag_validation.py  test_users.py
backend/tests/integration/: test_projects.py
backend/tests/unit/: test_embedding_service.py  test_guardrails.py  test_query_cache.py  test_security.py
docs/: architecture.md  google-oauth-setup.md  security.md
docs/diagrams/: DIAGRAM_PROMPT.md
docs/runbooks/: presentation_guide.md
frontend/: package-lock.json  package.json
infrastructure/nginx/: nginx.conf
scripts/: create_admin.py  migrate_supabase_to_docker.py  start_dev.sh
sdks/python/: README.md  pyproject.toml
sdks/python/ez_ragify/: __init__.py  _client.py  _exceptions.py  _types.py
sdks/python/tests/: test_client.py
supabase/: rls_policies.sql  traceable_rag_migration.sql  usage_log_migration.sql
(+33 files in other folders)
