[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ragify-backend"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "ANN"]
ignore = ["ANN101", "ANN102", "S101", "S105"]
per-file-ignores = { "tests/**" = ["S", "ANN"] }

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = true
exclude = ["alembic/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
  "unit: pure unit tests, no DB or network",
  "integration: requires running DB and Redis",
  "slow: tests that take more than 5 seconds",
]

[tool.bandit]
targets = ["app"]
skips = ["B101", "B601"]
exclude_dirs = ["tests", "alembic"]
