[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ez-ragify"
version = "0.1.0"
description = "Official Python SDK for the RAGify RAG-as-a-Service API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "RAGify Team" }]
keywords = ["rag", "sdk", "llm", "retrieval-augmented-generation", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.25.0,<1.0",
    "pydantic>=2.0.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/ragify/ragi-fy-python"
Documentation = "https://docs.ragify.dev/sdks/python"

[tool.hatch.build.targets.wheel]
packages = ["ez_ragify"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
